modules/gdscript/tests/scripts/analyzer/errors/derived_singleton_class_instantiate.gd
class A extends IP:
	pass

func test():
	A.new()
